# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.709 2008-07-16 09:09:57 tr Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.3.0 rc1 (2008/07/??)
 - (2008/07/16) Fixed bug# 3089 - Stats module creates an error log entry with
    message "Got no SessionID" .
 - (2008/07/16) Fixed bug# 3088 - Statistics module fails with
    message "Got no AccessRw" if you work with ro permissions
 - (2008/07/16) Fixed bug# 3012 - Statistics module fails with
    message "Got no UserLanguage"
 - (2008/07/15) Fixed bug# 3082 - Wrong requirement checks and false default
    handling in function QueueAdd and QueueUpdate
 - (2008/07/10) Fixed bug# 3066 - The CPAN module XML::Parser::Lite crashs after
    login if the CPAN module version is not installed.
 - (2008/07/09) Updated catalonian translation, thanks to Antonio Linde!
 - (2008/07/09) Updated finish translation, thanks to Mikko Hynninen!
 - (2008/07/09) Fixed problem in CodeUpgrade functionallity.
    Code did not react correctly to version number in CodeUpgrade sections.
 - (2008/07/08) Updated norwegian translation, thanks to Fredrik Andersen!

2.3.0 beta4 (2008/07/07)
 - (2008/07/07) Fixed bug# 2158 - Trigger Definitions not allow export / import
    through oracle exp/imp tool.
 - (2008/07/06) Fixed bug# 3058 - Unconsistent usage of id's in
    otrs-initial_insert.*.sql. E. g. in case of Dual-Master MySQL 5 Replication
    is used.
 - (2008/07/06) Fixed bug# 3059 - article_search table is missing in
    scripts/database/otrs-schema.*.sql and scripts/DBUpdate-to-2.3.*.sql.
 - (2008/07/04) Fixed bug# 3055 - Link migration from 2.2 -> 2.3 is no working
    (missing TypeGet(), not shown because of disabled STDERR).
 - (2008/07/03) Fixed bug# 3053 - AJAX functionality without cookies is not